--- a/style.css
+++ b/style.css
@@ -1,8 +1,17 @@
 html,body
 {
-  background-color: darkcyan;
+  background-color: white;
 }
-li
+.connexion
+{
+  text-align: right;
+}
+
+.nomEntreprise
+{
+  font-size: xx-large;
+}
+ li
 {display: inline-block;
 }
 
@@ -46,6 +55,7 @@ li a {
 
 li a:hover {
     background-color:#090930;
+
   }
 
     div.produit1, .produit2, .produit3 {
@@ -63,8 +73,23 @@ li a:hover {
         width: 100%;
         height: auto;
     }
+  .produit3
+  {
+  width: 100%;
+}
 
-    div.Nom, .Nom2, .Nom3{
+    .Nom, .Nom2, .Nom3{
         padding: 15px;
         text-align: center;
+        font-size: 20px;
+    }
+    .Nom,.Nom2, .Nom3 ul
+    {
+      font-size: 15px;
+
+    }
+
+    .réseau
+    {
+      text-align: center;
     }
